// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-typeahead Default 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-controls="m-typeahead-uuid-controls"
      aria-haspopup="true"
      class="m-textfield m--has-label m--is-type-text"
      cursor-pointer="true"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mTextfield-uuid"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  Fruits and vegetables
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  class="m-textfield__input"
                  id="mTextfield-uuid"
                  maxlength="Infinity"
                  type="text"
                />
                   
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-typeahead__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <h2
    class="m-u--h5"
  >
    Results
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;

exports[`Storyshots components|m-typeahead filter-results-manually 1`] = `
<div>
  <div
    class="m-typeahead"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-controls="m-typeahead-uuid-controls"
      aria-haspopup="true"
      class="m-textfield m--is-type-text"
      cursor-pointer="true"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <input
                  class="m-textfield__input"
                  id="mTextfield-uuid"
                  maxlength="Infinity"
                  placeholder="Fruits and vegetables"
                  type="text"
                />
                   
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-textfield__validation"
      >
        <div
          class="m-validation-message m-textfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-typeahead__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <h2
    class="m-u--h5"
  >
    Results
  </h2>
   
  <p>
    [
  "Tomato",
  "Celery",
  "Apple",
  "Bannana",
  "Patate",
  "Carrot",
  "Avocados",
  "Eggplant",
  "Beet",
  "Pineapple",
  "Lemon",
  "Pumpkin",
  "Kiwi"
]
  </p>
</div>
`;
